2006-03-28  Andy Wingo  <wingo@pobox.com>

	* configure.ac: Check for gnonlin and cairo using python and not
	pkg-config.

2006-03-24  Christian Schaller  <Christian@fluendo.com>

	* .cvsignore: add more generated files
	* pitivi/.cvsignore: add more generated files
	* pitivi/ui/.cvsignore: add more generated files

2006-03-24  Edward Hervey  <edward@fluendo.com>

	* pitivi/objectfactory.py:
	typo fix.

2006-03-24  Edward Hervey  <edward@fluendo.com>

	* configure.ac:
	Remove gnome-python dependency. If ever we need gnome-specific stuff, it
	should go in a pitivi plugin.
	* pitivi.spec.in:
	remove cruft

2006-03-24  Edward Hervey  <edward@fluendo.com>

	* pitivi/bin.py:
	* pitivi/check.py:
	* pitivi/discoverer.py:
	* pitivi/objectfactory.py:
	* pitivi/project.py:
	Remove dependency on gnomevfs python module, and use the gstreamer uri
	utilities instead (gst.element_make_from_uri, gst.uri_get_protocol,
	gst.uri_get_location)

2006-03-23  Edward Hervey  <edward@fluendo.com>

	* pitivi/configure.py.in:
	* pitivi/discoverer.py:
	* pitivi/objectfactory.py:
	* pitivi/playground.py:
	* pitivi/settings.py:
	* pitivi/sourcelist.py:
	* pitivi/ui/viewer.py:
	More API documentation

2006-03-23  Edward Hervey  <edward@fluendo.com>

	* pitivi/configure.py.in:
	Added get_global_pixmap_dir() for being able to use local/global installed
	pixmap directory.
	* pitivi/ui/mainwindow.py:
	Fix window icon behaviour for cvs and installed
	* pitivi/ui/projectsettings.py:
	icon not needed here

2006-03-23  Edward Hervey  <edward@fluendo.com>

	* pitivi/discoverer.py:
	* pitivi/effects.py:
	* pitivi/objectfactory.py:
	* pitivi/pitivi.py:
	* pitivi/playground.py:
	* pitivi/project.py:
	* pitivi/timeline.py:
	* pitivi/ui/complexlayer.py:
	* pitivi/ui/complexsource.py:
	* pitivi/ui/complextimeline.py:
	* pitivi/ui/exportsettingswidget.py:
	* pitivi/ui/gstwidget.py:
	* pitivi/ui/mainwindow.py:
	* pitivi/ui/projectsettings.py:
	* pitivi/ui/ruler.py:
	* pitivi/ui/sourcefactories.py: